# p2p_chat_rust

./: .gitignore  Cargo.toml  README.md
crates/chat-core/: Cargo.toml
crates/chat-core/src/: lib.rs  network.rs  types.rs
crates/chat-node/: Cargo.toml
crates/chat-node/src/: main.rs
crates/chat-tui/: Cargo.toml
crates/chat-tui/src/: app.rs  main.rs
